Add HTTPS enforcement and new Tia.ai project images

--- a/images/projects/desktop.ini
+++ b/images/projects/desktop.ini
@@ -1,2 +1,4 @@
 [LocalizedFileNames]
 Screenshot 2025-08-11 135139.png=@Screenshot 2025-08-11 135139,0
+Screenshot 2025-08-11 181228.png=@Screenshot 2025-08-11 181228,0
+Screenshot 2025-08-11 180943.png=@Screenshot 2025-08-11 180943,0
